BB-1250 Update Client and Contract Tests
